--- a/module-common/build.gradle
+++ b/module-common/build.gradle
@@ -1,13 +1,9 @@
-bootJar {
-    enabled = false
-}
+bootJar { enabled = false }
 
-jar {
-    enabled = true
-}
+jar { enabled = true }
 
 dependencies {
-    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-    implementation('com.h2database:h2')
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    runtime('com.h2database:h2')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
