--- a/module-web/build.gradle
+++ b/module-web/build.gradle
@@ -1,5 +1,4 @@
 dependencies {
-    implementation project(':module-common')
-    implementation('org.springframework.boot:spring-boot-starter-web')
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    compile('org.springframework.boot:spring-boot-starter-web')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
