--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'gradle-multi-modules'
-include 'module-api', 'module-web', 'module-common'
+include 'module-api'
+include 'module-web'
+include 'module-common'
 
